changed loggIn and signUp files from .php to .html . changed some code but functions still dont work.Can Creat accounts but  issue with logging in.

--- a/www/public/Html-mall/inc/signUp.html
+++ b/www/public/Html-mall/inc/signUp.html
@@ -15,7 +15,7 @@
 
     </header>
     <main>
-        <form action="/Register.php" method="post">
+        <form action="./Register.php" method="post">
             <article>
                 <label> insert First Name! </label>
                 <input name="firstName" type="text">
