--- a/www/public/Html-mall/inc/signUp.html
+++ b/www/public/Html-mall/inc/signUp.html
@@ -31,7 +31,7 @@
                 <br>
                 <input type="submit" value="Create Account">
 
-                <a href="login.html">login</a>
+                <a href="../index.php">login</a>
             </article>
         </form>
         <!-- fortsätt och skapa signUp page-->
